Enhance WhatsApp MCP server with database integration and QR code generation
This commit introduces a PostgreSQL database connection and management functionality to the WhatsApp MCP server. It adds a new `database` package for handling database connections and migrations, and a `qrcode` package for generating and managing QR codes. The server now supports dynamic QR code generation with hosted image URLs, improving user experience during WhatsApp Web authentication. Additionally, the `client` package is refactored to implement a `WhatsAppClientInterface`, allowing for better abstraction and flexibility in client operations. The README.md is updated to reflect these changes, providing clearer instructions for setup and usage.

--- a/example.env
+++ b/example.env
@@ -11,6 +11,10 @@ SERVER_VERSION=1.0.0
 # Logging
 LOG_LEVEL=info
 
+# Database Configuration
+# PostgreSQL connection URL format: postgres://username:password@host:port/database?sslmode=disable
+DATABASE_URL=postgres://postgres:postgres@localhost:5432/whatsmeow_mcp?sslmode=disable
+
 # WhatsApp Configuration (for future use)
 # WHATSAPP_DB_PATH=./whatsapp.db
 # WHATSAPP_SESSIONS_PATH=./sessions
