Refactor server configuration and enhance health check functionality
This commit updates the server configuration to use separate ports for the MCP and REST API, improving clarity and flexibility. It introduces health check endpoints for liveness and readiness, allowing better monitoring of the application's state. Additionally, the Dockerfile is modified to expose the new ports, and the example environment file is updated to reflect the changes in port configuration. The main server logic is also adjusted to support graceful shutdown and improved logging for server operations.

--- a/example.env
+++ b/example.env
@@ -1,7 +1,15 @@
 # WhatsApp MCP Server Configuration
 
 # Server Configuration
-PORT=3000
+# MCP_PORT - Port for MCP/SSE server (default: 3000)
+MCP_PORT=3000
+
+# REST_PORT - Port for REST API (health checks, static files) (default: 3001)  
+REST_PORT=3001
+
+# PORT - Legacy support, sets MCP_PORT and REST_PORT=PORT+1 if MCP_PORT is not set
+# PORT=3000
+
 HOST=localhost
 
 # MCP Configuration
@@ -15,6 +23,3 @@ LOG_LEVEL=info
 # PostgreSQL connection URL format: postgres://username:password@host:port/database?sslmode=disable
 DATABASE_URL=postgres://postgres:postgres@localhost:5432/whatsmeow_mcp?sslmode=disable
 
-# WhatsApp Configuration (for future use)
-# WHATSAPP_DB_PATH=./whatsapp.db
-# WHATSAPP_SESSIONS_PATH=./sessions
