--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -130,6 +130,24 @@
                 "cwd": "${workspaceFolder}"
             },
             "problemMatcher": "$go"
+        },
+        {
+            "label": "Git: Push with tags",
+            "type": "shell",
+            "command": "git",
+            "args": ["push", "origin", "--tags"],
+            "group": "build",
+            "presentation": {
+                "echo": true,
+                "reveal": "always",
+                "focus": true,
+                "panel": "shared",
+                "showReuseMessage": true,
+                "clear": false
+            },
+            "options": {
+                "cwd": "${workspaceFolder}"
+            }
         }
     ]
 }
