Add STATIC_URL configuration for static files and update QR code generation
This commit introduces a new environment variable, STATIC_URL, to specify the base URL for static files. The Config struct in main.go is updated to load this variable, with a default fallback mechanism. Additionally, the QR code generator now uses the STATIC_URL for generating image URLs, improving flexibility in static file handling.

--- a/example.env
+++ b/example.env
@@ -12,6 +12,12 @@ REST_PORT=3001
 
 HOST=localhost
 
+# STATIC_URL - Base URL for static files (QR codes, etc.)
+# Must include the full path to the static directory
+# If not set, defaults to http://HOST:REST_PORT/static
+# Examples: http://0.0.0.0:5002/static, https://example.com/static, http://localhost:6679/static
+STATIC_URL=http://localhost:6679/static
+
 # MCP Configuration
 SERVER_NAME=whatsmeow-mcp
 SERVER_VERSION=1.0.0
